--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,7 @@
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link Libraries -->
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
@@ -6,5 +9,7 @@
     <!-- Link Our Files -->
     <script src="/static/app.js" defer></script>
     <link rel="stylesheet" href="/static/styles.css">
-    
+
+    <title>Love Notes</title>
+
 </head>
