removed unnecessary html elements

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,14 +2,11 @@
 <html lang="en">
     <%- include('../partials/head.ejs') %>
     <body>
-        <div class="notes" id="app">
+        <!-- <div class="notes" id="app">
 
             <div class="notes__sidebar">
-                <!-- add new note button -->
                 <button class="notes__add" type="button">Add Note</button>
-                <!-- list of notes -->
                 <div class="notes__list">
-                    <!-- existing note -->
                     <div class="notes__list-item">
                         <div class="notes__small-title">Lecture Notes</div>
                         <div class="notes__small-body">I learnt nothing today.</div>
@@ -22,6 +19,6 @@
                 <input class="notes__title" type="text" placeholder="Enter a title...">
                 <textarea class="notes__body">I am the notes body...</textarea>
             </div>
-        </div>
+        </div> -->
     </body>
 </html>
