--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -2,7 +2,23 @@
 <html lang="en">
     <%- include('../partials/head.ejs') %>
     <body>
-        <!-- <div class="notes" id="app">
+        <nav>
+            <h1 class="big-title">theraNotes</h1>
+            <div class="dropdown-menu"></div>
+        </nav>
+        <div class="client-top-display">
+            <h4 class="client-top-display-welcome-back-text">Welcome back, user.</h4>
+            <p class="client-top-display-start-planning-text">Start planning for your next session below.</p>
+            <a><button class="client-top-display-big-button">Plan for Next Session</button></a>
+        </div>
+        <div class="client-all-sessions-display">
+            <p class="all-sessions-subtitle">All Sessions</p>
+        </div>
+    </body>
+</html>
+
+
+<!-- <div class="notes" id="app">
 
             <div class="notes__sidebar">
                 <button class="notes__add" type="button">Add Note</button>
@@ -20,5 +36,3 @@
                 <textarea class="notes__body">I am the notes body...</textarea>
             </div>
         </div> -->
-    </body>
-</html>
