--- a/public/styles.css
+++ b/public/styles.css
@@ -67,6 +67,11 @@ button {
     cursor: pointer;
 }
 
+.session-note-container {
+    border: 1px solid black;
+}
+
+
 .notes__sidebar {
     border-right: 3px solid pink;
     flex-shrink: 0;
