--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -9,7 +9,7 @@
         <div class="client-top-display">
             <h4 class="client-top-display-welcome-back-text">Welcome back, user.</h4>
             <p class="client-top-display-start-planning-text">Start planning for your next session below.</p>
-            <a><button class="client-top-display-big-button">Plan for Next Session</button></a>
+            <a href="/notes/new"><button class="client-top-display-big-button">Plan for Next Session</button></a>
         </div>
         <div class="client-all-sessions-display">
             <p class="all-sessions-subtitle">All Sessions</p>
