--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,6 +15,6 @@
     <script src="/static/app.js" defer></script>
     <link rel="stylesheet" href="/static/styles.css">
 
-    <title>theraNotes</title>
+    <title><%= title %></title>
 
 </head>
