--- a/views/client/new.ejs
+++ b/views/client/new.ejs
@@ -10,7 +10,7 @@
         </div>
 
 
-        <form class="new-session-form">
+        <form class="new-session-form" action="/notes" method="POST">
             <div class="new-session-date-input">
                 Date of Session: <input type="date" name="date" min="2022-01-01" max="2050-01-01">
             </div>
@@ -18,12 +18,20 @@
             <div class="new-session-pre-and-post-notes-container">
                 <div class="new-session-pre-session-area">
                     <p class="new-session-pre-session-subtitle">pre-session notes</p>
-                    <input class="new-session-note-input" type="textarea">
+                    <input class="new-session-note-input" type="textarea" name="preSessionNote">
                 </div>
                 <div class="new-session-post-session-area">
                     <p class="new-session-post-session-subtitle">post-session notes</p>
-                    <input class="new-session-note-input"  type="textarea">
+                    <input class="new-session-note-input"  type="textarea" name="postSessionNote">
                 </div>
+            </div>
+
+            <!-- Save & Send to Therapist button... how to implement? -->
+            <div class="new-session-save-buttons-container">
+                <a href=""><button class="new-session-save-and-send-to-therapist-button">Save & Send to Therapist</button></a>
+
+                <!-- Save button aka Create Route!!! -->
+                <input type="submit" value="Save">
             </div>
 
         </form>
