finished create route

--- a/views/client/new.ejs
+++ b/views/client/new.ejs
@@ -12,7 +12,7 @@
 
         <form class="new-session-form" action="/notes" method="POST">
             <div class="new-session-date-input">
-                Date of Session: <input type="date" name="date" min="2022-01-01" max="2050-01-01">
+                Date of Session: <input type="date" name="date" min="2022-01-01" max="2050-01-01" required>
             </div>
 
             <div class="new-session-pre-and-post-notes-container">
