--- a/public/styles.css
+++ b/public/styles.css
@@ -162,7 +162,7 @@ button {
 
 /* use css grid here for text areas? they r being weird */
 .new-session-note-input {
-    width: 400%;
+    width: 300%;
     height: 500px;
 }
 
@@ -251,78 +251,35 @@ button {
     background-color: rgb(120, 120, 120);
 }
 
-
-/* 
-
-.notes__add {
-    background: #009578;
-    border: none;
-    border-radius: 7px;
-    color: #ffffff;
-    cursor: pointer;
-    font-size: 1.25em;
-    font-weight: bold;
-    margin-bottom: 1em;
-    padding: 0.75em 0;
-    width: 100%;
-}
-
-.notes__add:hover {
-    background: #00af8c;
-}
-
-.notes__list-item {
-    cursor: pointer;
-}
-
-.notes__list-item--selected {
-    background: #eeeeee;
-    border-radius: 7px;
-    font-weight: bold;
-}
-
-.notes__small-title,
-.notes__small-updated {
-    padding: 10px;
-}
-
-.notes__small-title {
-    font-size: 1.2em;
-}
-
-.notes__small-body {
-    padding: 0 10px;
-}
-
-.notes__small-updated {
-    color: #aaaaaa;
-    font-style: italic;
-    text-align: right;
-}
-
-.notes__preview {
+.edit-session-top-display {
     display: flex;
     flex-direction: column;
-    padding: 2em 3em;
-    flex-grow: 1;
+    align-items: center;
 }
 
-.notes__title,
-.notes__body {
+.edit-session-now-writing-text {
+    font-size: 1.8rem;
+    margin-bottom: 0;
+}
+
+.edit-session-sent-status-text {
+    font-size: 1.5rem;
+}
+
+.send-to-therapist-button {
+    margin-left: 0.5rem;
+    border-radius: 1rem;
     border: none;
-    outline: none;
-    width: 100%;
+    padding: 0.75rem;
+    transition: 0.2s;
+    font-size: 1rem;
 }
 
-.notes__title {
-    font-size: 3em;
-    font-weight: bold;
+.edit-session-note-input, .new-session-note-input {
+    /* border: 1px solid black; */
+    margin: 0 7%;
+    padding: 1rem;
+    background-color: white;
+    border-radius: 1rem;
+    font-size: 1.1rem;
 }
-
-.notes__body {
-    flex-grow: 1;
-    font-size: 1.2em;
-    line-height: 1.5;
-    margin-top: 2em;
-    resize: none;
-} */
