--- a/views/client/show.ejs
+++ b/views/client/show.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head.ejs', {title: "theraNotes"}) %>
+    <%- include('../partials/head.ejs', {title: "theraNotes | View Session"}) %>
 
     <body>
         <%- include('../partials/header.ejs') %>
