--- a/views/client/edit.ejs
+++ b/views/client/edit.ejs
@@ -24,13 +24,13 @@
                 Change Session Date? (optional) : <input type="date" name="date" min="2022-01-01" max="2050-01-01">
             </div>
 
-            <div class="show-session-notes-display">
-                <div class="show-pre-session-notes-container">
-                    <p class="show-session-pre-notes-subtitle">pre-session notes</p>
+            <div class="edit-session-pre-and-post-notes-container">
+                <div class="edit-session-pre-session-area">
+                    <p class="pre-session-notes-subtitle">pre-session notes</p>
                     <input class="edit-session-note-input" type="textarea" name="preSessionNote" value="<%= note.preSessionNote %>">
                 </div>
-                <div class="show-post-session-notes-container">
-                    <p class="show-session-post-notes-subtitle">post-session notes</p>
+                <div class="edit-session-post-session-area">
+                    <p class="post-session-notes-subtitle">post-session notes</p>
                     <input class="edit-session-note-input"  type="textarea" name="postSessionNote" value="<%= note.postSessionNote %>">
                 </div>
             </div>
@@ -44,7 +44,7 @@
         </form>
 
         <div class="new-session-back-button-area">
-            <a href="/home"><button>back</button></a>
+            <a href="/notes/<%= note._id %>"><button>Cancel</button></a>
         </div>
 
     </body>
