--- a/views/client/edit.ejs
+++ b/views/client/edit.ejs
@@ -27,11 +27,11 @@
             <div class="edit-session-pre-and-post-notes-container">
                 <div class="edit-session-pre-session-area">
                     <p class="pre-session-notes-subtitle">pre-session notes</p>
-                    <input class="edit-session-note-input" type="textarea" name="preSessionNote" value="<%= note.preSessionNote %>">
+                    <textarea class="edit-session-note-input"name="preSessionNote"><%= note.preSessionNote %></textarea>
                 </div>
                 <div class="edit-session-post-session-area">
                     <p class="post-session-notes-subtitle">post-session notes</p>
-                    <input class="edit-session-note-input"  type="textarea" name="postSessionNote" value="<%= note.postSessionNote %>">
+                    <textarea class="edit-session-note-input" name="postSessionNote"><%= note.postSessionNote %></textarea>
                 </div>
             </div>
 
