--- a/views/client/new.ejs
+++ b/views/client/new.ejs
@@ -18,11 +18,11 @@
             <div class="new-session-pre-and-post-notes-container">
                 <div class="new-session-pre-session-area">
                     <p class="pre-session-notes-subtitle">pre-session notes</p>
-                    <input class="new-session-note-input" type="textarea" name="preSessionNote">
+                    <textarea class="new-session-note-input" name="preSessionNote"></textarea>
                 </div>
                 <div class="new-session-post-session-area">
                     <p class="post-session-notes-subtitle">post-session notes</p>
-                    <input class="new-session-note-input"  type="textarea" name="postSessionNote">
+                    <textarea class="new-session-note-input" name="postSessionNote"></textarea>
                 </div>
             </div>
 
