--- a/views/client/edit.ejs
+++ b/views/client/edit.ejs
@@ -38,13 +38,13 @@
             <!-- Save & Send to Therapist button... how to implement? -->
             <div class="edit-session-save-buttons-container">
                 <!-- Save button aka Update Route!!! -->
-                <input type="submit" value="Save Changes">
+                <input class="edit-page-save-changes-button" type="submit" value="Save Changes">
             </div>
 
         </form>
 
-        <div class="new-session-back-button-area">
-            <a href="/notes/<%= note._id %>"><button>Cancel</button></a>
+        <div class="back-button-area">
+            <a href="/notes/<%= note._id %>"><button class="new-page-button">Cancel</button></a>
         </div>
 
     </body>
