--- a/views/client/new.ejs
+++ b/views/client/new.ejs
@@ -18,26 +18,26 @@
             <div class="new-session-pre-and-post-notes-container">
                 <div class="new-session-pre-session-area">
                     <p class="pre-session-notes-subtitle">pre-session notes</p>
-                    <textarea class="new-session-note-input" name="preSessionNote"></textarea>
+                    <textarea class="new-session-note-input" name="preSessionNote" placeholder="Start typing here..."></textarea>
                 </div>
                 <div class="new-session-post-session-area">
                     <p class="post-session-notes-subtitle">post-session notes</p>
-                    <textarea class="new-session-note-input" name="postSessionNote"></textarea>
+                    <textarea class="new-session-note-input" name="postSessionNote" placeholder="Start typing here..."></textarea>
                 </div>
             </div>
 
             <!-- Save & Send to Therapist button... how to implement? -->
             <div class="new-session-save-buttons-container">
-                <a href=""><button class="new-session-save-and-send-to-therapist-button">Save & Send to Therapist</button></a>
+                <a href=""><button class="new-page-button">save & send to therapist</button></a>
 
                 <!-- Save button aka Create Route!!! -->
-                <input type="submit" value="Save">
+                <input class="new-page-button" type="submit" value="save">
             </div>
 
         </form>
 
-        <div class="new-session-back-button-area">
-            <a href="/home"><button>back</button></a>
+        <div class="back-button-area">
+            <a href="/home"><button class="new-page-button">back</button></a>
         </div>
 
     </body>
