--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ body {
 
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     border-bottom: 0.15rem solid black;
 }
 
@@ -19,9 +19,28 @@ nav {
 .big-title {
     padding: 0px;
     margin: 1.2rem;
+    margin-left: 3rem;
     font-size: 4rem;
     font-family: 'Comfortaa', cursive;
     
+}
+
+.menu-links-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 40%;
+    /* border: 1px solid red; */
+}
+
+.menu-links-container a {
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.menu-links-container a:visited {
+    text-decoration: none;
+    color: black;
 }
 
 textarea {
