--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,10 @@
 <header>
     <nav>
         <h1 class="big-title"><span class="thera">thera</span>Notes</h1>
-        <div class="dropdown-menu"></div>
+        <div class="menu-links-container">
+            <a href="/home">Home</a>
+            <a href="/notes/new">Add New Session</a>
+            <a href="/logout">Logout</a>
+        </div>
     </nav>
 </header>
