--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -33,11 +33,11 @@
                     <div class="pre-and-post-note-preview">
                         <div class="pre-session-preview">
                             <p class="pre-session-preview-heading">pre-session</p>
-                            <%= notes[i].preSessionNote %>
+                            <p class="preview-note"><%= notes[i].preSessionNote %></p>
                         </div>
                         <div class="post-session-preview">
                             <p class="post-session-preview-heading">post-session</p>
-                            <%= notes[i].postSessionNote %>
+                            <p  class="preview-note"><%= notes[i].postSessionNote %></p>
                         </div>
                     </div>
 
