--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <nav>
+    <nav class="web-nav">
         <h1 class="big-title"><span class="thera">thera</span>Notes</h1>
         <div class="menu-links-container">
             <a href="/home">Home</a>
@@ -7,4 +7,9 @@
             <a href="/logout">Logout</a>
         </div>
     </nav>
+
+    <!-- <nav class="mobile-side-nav">
+        <h1>hi</h1>
+    </nav> -->
+
 </header>
