--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,9 @@
     <nav class="web-nav">
         <h1 class="big-title"><span class="thera">thera</span>Notes</h1>
         <div class="menu-links-container">
-            <a href="/home">Home</a>
-            <a href="/notes/new">Add New Session</a>
-            <a href="/logout">Logout</a>
+                <a href="/home">Home</a>
+                <a href="/notes/new">Add New Session</a>
+                <a href="/logout" id="logout-link">Logout</a>
         </div>
     </nav>
 
