--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,17 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
+body {
+    position: relative;
+    min-height: 100vh;
+}
+
+body::after {
+    content: '';
+    display: block;
+    height: 10rem;
+}
+
 .web-nav {
     display: flex;
     justify-content: space-between;
@@ -370,6 +381,10 @@ button {
 }
 
 footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10rem;
     background-color: pink;
 }
 
